Добавил эндпоинт на logout
